@@ -2,5 +2,6 @@
 go under the file->project structure->libraries
 click the plus and add the javafxs/"OS"/lib
 
-then between the run button and the hammer click the drop down
-go to edit configuration, in VM options type in
+--module-path
+"Path to farming sim"/javafxs/"os"/lib
+--add-modules=javafx.controls,javafx.fxml
